--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
     .charged {
       color: #ff5b8b;
     }
+
+    #resetBtn {
+      margin-top: 1.5rem;
+      padding: 0.6rem 1.2rem;
+      font-size: 1rem;
+      background-color: #f783ac;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      cursor: pointer;
+    }
+
+    #resetBtn:hover {
+      background-color: #e64980;
+    }
   </style>
 </head>
 <body>
@@ -60,6 +75,8 @@
   <label>하루 목표 연락 시간 (분)</label>
   <input type="number" id="targetTime" value="1200">
 
+  <button id="resetBtn">입력값 초기화</button>
+
   <div class="result">
     <div id="heart" class="heart">❤️</div>
     <p id="percent">연락 퍼센트: 0%</p>
@@ -74,6 +91,7 @@
     const heart = document.getElementById('heart');
     const percentText = document.getElementById('percent');
     const totalText = document.getElementById('total');
+    const resetBtn = document.getElementById('resetBtn');
 
     function updateHeart() {
       const total = Number(call.value) + Number(kakao.value) + Number(dm.value);
@@ -95,6 +113,14 @@
 
     [call, kakao, dm, target].forEach(input => {
       input.addEventListener('input', updateHeart);
+    });
+
+    resetBtn.addEventListener('click', () => {
+      call.value = 0;
+      kakao.value = 0;
+      dm.value = 0;
+      target.value = 1200;
+      updateHeart();
     });
   </script>
 </body>
