--- a/index.html
+++ b/index.html
@@ -3,62 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>LoveCentage</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background-color: #fff0f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-    }
-
-    h1 {
-      color: #d63384;
-    }
-
-    label {
-      display: block;
-      margin: 1rem 0 0.2rem;
-    }
-
-    input {
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      width: 200px;
-    }
-
-    .result {
-      margin-top: 2rem;
-      text-align: center;
-    }
-
-    .heart {
-      font-size: 100px;
-      transition: transform 0.3s ease;
-      color: lightgray;
-    }
-
-    .charged {
-      color: #ff5b8b;
-    }
-
-    #resetBtn {
-      margin-top: 1.5rem;
-      padding: 0.6rem 1.2rem;
-      font-size: 1rem;
-      background-color: #f783ac;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      cursor: pointer;
-    }
-
-    #resetBtn:hover {
-      background-color: #e64980;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+ 
 </head>
 <body>
   <h1>💕 LoveCentage - 오늘의 연락 비율</h1>
