--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="navbar">
       <div class="menu-icon" onclick="toggleMenu()">☰</div>
       <div class="logo">LoveCentage</div>
+      <a class="login-link" href="#">기념일 스케줄 로그인</a>
     </div>
   </header>
 
