UI 수정 및 단계별 하트 이미지 코드 구현

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <p>하루 중 얼마나 연락했는지 시각적으로 보여줍니다.<br>스케줄 공유와 하트 게이지도 함께!</p>
 
       <div class="form-box">
+        <label>🎯 하루 목표 연락 시간 (분)</label>
+        <input type="number" id="targetTime" value="0">
+
         <label>📞 전화한 시간 (분)</label>
         <input type="number" id="callTime" value="0" min="0">
 
         <label>💬 카톡방에 있었던 시간 (분)</label>
         <input type="number" id="kakaoTime" value="0" min="0">
-
-        <label>하루 목표 연락 시간 (분)</label>
-        <input type="number" id="targetTime" value="1200">
 
         <label>📩 디엠창에 있었던 시간 (분)</label>
         <input type="number" id="dmTime" value="0" min="0">
