기념일페이지연동

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <!-- 슬라이딩 메뉴 -->
   <nav id="menu" class="menu">
     <div class="close-btn" onclick="toggleMenu()">✕</div>
-    <a href="#">기념일</a>
-    <a href="#">스케줄</a>
-    <a href="#">로그인</a>
+    <a href="anniversary.html">기념일</a>
+    <a href="schedule.html">스케줄</a>
+    <a href="login.html">로그인</a>
   </nav>
 
   <!-- 메인 콘텐츠 -->
