상단 버튼 페이지 연동

--- a/login.html
+++ b/login.html
@@ -9,8 +9,12 @@
   <header>
     <div class="navbar">
       <div class="menu-icon" onclick="toggleMenu()">☰</div>
-      <div class="logo">LoveCentage</div>
-      <a class="login-link" href="login.html">로그인</a>
+      <a href="index.html" class="logo">LoveCentage</a>
+      <div class="nav-links">
+        <a href="anniversary.html">기념일</a>
+        <a href="schedule.html">스케줄</a>
+        <a href="login.html">로그인</a>
+      </div>
     </div>
   </header>
 
