홈 버튼 구현 및 슬라이딩 메뉴 통일

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <header>
     <div class="navbar">
       <div class="menu-icon" onclick="toggleMenu()">☰</div>
-      <div class="logo">LoveCentage</div>
-      <a class="login-link" href="#">기념일 스케줄 로그인</a>
+      <a href="index.html" class="logo">LoveCentage</a>
     </div>
   </header>
 
   <!-- 슬라이딩 메뉴 -->
   <nav id="menu" class="menu">
     <div class="close-btn" onclick="toggleMenu()">✕</div>
+    <a href="index.html">홈</a>
     <a href="anniversary.html">기념일</a>
     <a href="schedule.html">스케줄</a>
     <a href="login.html">로그인</a>
