--- a/schedule.html
+++ b/schedule.html
@@ -11,15 +11,13 @@
       <div class="menu-icon" onclick="toggleMenu()">☰</div>
       <a href="index.html" class="logo">LoveCentage</a>
       <div class="nav-links">
-        <a href="anniversary.html">기념일</a>
-        <a href="schedule.html">스케줄</a>
-        <a href="login.html">로그인</a>
       </div>
     </div>
   </header>
 
   <nav id="menu" class="menu">
     <div class="close-btn" onclick="toggleMenu()">✕</div>
+    <a href="index.html">홈</a>
     <a href="anniversary.html">기념일</a>
     <a href="schedule.html">스케줄</a>
     <a href="login.html">로그인</a>
