퍼센트에 따른 단계별 하트 구현

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="image-side">
-      <img id="heart" src="heart_off.png" alt="하트 이미지" />
+      <img id="heart" src="heart_0.png" alt="하트 이미지" />
       <p id="percent">연락 퍼센트: 0%</p>
       <p id="total">총 연락 시간: 0분</p>
     </div>
