스케줄 입력/삭제/목록 기능 구현 및 localStorage 연동

--- a/schedule.html
+++ b/schedule.html
@@ -26,6 +26,21 @@
   <main>
     <h2>🗓️ 스케줄 페이지</h2>
     <p>데이트 일정이나 중요한 계획을 여기에 기록해보세요!</p>
+
+    <section class="schedule-section">
+  <h2>🗓️ 스케줄 관리</h2>
+
+  <div class="form-box">
+    <label>날짜</label>
+    <input type="date" id="scheduleDate">
+    <label>일정 내용</label>
+    <input type="text" id="scheduleContent" placeholder="예: 성수 데이트">
+    <button onclick="addSchedule()">추가</button>
+  </div>
+
+  <ul id="scheduleList" class="list-box"></ul>
+</section>
+
   </main>
 
   <script>
@@ -33,6 +48,7 @@
       document.getElementById('menu').classList.toggle('show');
     }
   </script>
+  
+  <script src="script.js"></script>
 </body>
 </html>
-v
