--- a/login.html
+++ b/login.html
@@ -42,6 +42,40 @@
     function toggleMenu() {
       document.getElementById('menu').classList.toggle('show');
     }
+     document.querySelector('.form-box').addEventListener('submit', async function (e) {
+    e.preventDefault(); // 기본 제출 방지
+
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value.trim();
+
+    if (!username || !password) {
+      alert('아이디와 비밀번호를 모두 입력해주세요.');
+      return;
+    }
+
+    try {
+      const res = await fetch('http://localhost:3000/api/auth/login', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ username, password })
+      });
+
+      const data = await res.json();
+
+      if (res.ok) {
+        alert('로그인 성공!');
+        localStorage.setItem('username', data.username); // 사용자 정보 저장
+        window.location.href = 'index.html'; // 메인 페이지로 이동
+      } else {
+        alert(data.error || '로그인 실패');
+      }
+    } catch (err) {
+      console.error('로그인 오류:', err);
+      alert('서버에 연결할 수 없습니다.');
+    }
+  });
   </script>
 </body>
 </html>
