--- a/login.html
+++ b/login.html
@@ -38,10 +38,45 @@
     </form>
   </main>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById('menu').classList.toggle('show');
+<script>
+  function toggleMenu() {
+    document.getElementById('menu').classList.toggle('show');
+  }
+
+  // 로그인 요청 처리
+  document.querySelector('.form-box').addEventListener('submit', async function (e) {
+    e.preventDefault(); // 기본 폼 제출 막기
+
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value.trim();
+
+    if (!username || !password) {
+      alert('아이디와 비밀번호를 모두 입력해주세요.');
+      return;
     }
-  </script>
+
+    try {
+      const res = await fetch('http://localhost:3000/api/auth/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ username, password })
+      });
+
+      const data = await res.json();
+
+      if (res.ok) {
+        alert('로그인 성공!');
+        localStorage.setItem('username', data.username); // 사용자 이름 저장
+        window.location.href = 'index.html'; // 메인 페이지로 이동
+      } else {
+        alert(data.error || '로그인 실패');
+      }
+    } catch (err) {
+      console.error('로그인 오류:', err);
+      alert('서버에 연결할 수 없습니다.');
+    }
+  });
+</script>
+
 </body>
 </html>
